Adding quick_map

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,14 @@ export(cv_ml)
 export(fit_hal_parallel)
 export(fit_rf_parallel)
 export(folds_list_to_df_list)
+export(quick_map)
 export(spatial_sample_plus_close_pairs)
 import(RANN)
 import(hal9001)
+import(leaflet)
 import(parallel)
 import(ranger)
+import(raster)
+import(sf)
+import(sp)
+import(wesanderson)
