Adding space_time_ppmify functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,14 @@ export(fit_hal_parallel)
 export(fit_rf_parallel)
 export(folds_list_to_df_list)
 export(quick_map)
+export(space_time_ppmify)
 export(spatial_sample_plus_close_pairs)
 import(RANN)
 import(hal9001)
+import(httr)
 import(leaflet)
 import(parallel)
+import(ppmify)
 import(ranger)
 import(raster)
 import(sf)
