--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,7 @@ Version: 0.0.0.9000
 Authors@R: person("Hugh", "Sturrock", email = "hughsturrock@gmail.com", role = c("aut", "cre"))
 Description: A collection of spatial analysis functions related to the DiSARM project at UCSF.
 Depends: R (>= 3.5.3)
+Imports: sp, sf, RANN, ranger, hal9001, raster
 License: MIT
 Encoding: UTF-8
 LazyData: true
