Hoping this helps..

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(dist_to_sf_raster)
 export(fit_hal_parallel)
 export(fit_rf_parallel)
 export(folds_list_to_df_list)
+export(gam_posterior_metrics)
 export(quick_map)
 export(space_time_ppmify)
 export(spatial_sample_plus_close_pairs)
@@ -15,6 +16,7 @@ import(hal9001)
 import(httr)
 import(leaflet)
 import(lubridate)
+import(mgcv)
 import(parallel)
 import(ppmify)
 import(ranger)
