--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(fit_hal_parallel)
 export(fit_rf_parallel)
 export(folds_list_to_df_list)
 export(gam_posterior_metrics)
+export(optimal_range)
 export(quick_map)
 export(space_time_ppmify)
 export(spatial_sample_plus_close_pairs)
