Adding adaptive.sample docs to adaptive_sample_auto

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(space_time_ppmify)
 export(spatial_sample_plus_close_pairs)
 import(RANN)
 import(caret)
+import(graphics)
 import(hal9001)
 import(httr)
 import(leaflet)
@@ -26,5 +27,8 @@ import(raster)
 import(sf)
 import(sp)
 import(spaMM)
+import(stats)
+import(utils)
 import(velox)
 import(wesanderson)
+importFrom(pdist,pdist)
