Removing hal9001 from the import list as in only on GitHub

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,10 @@ export(optimal_range)
 export(quick_map)
 export(space_time_ppmify)
 export(spatial_sample_plus_close_pairs)
+import("")
 import(RANN)
 import(caret)
 import(graphics)
-import(hal9001)
 import(httr)
 import(leaflet)
 import(lubridate)
