Adding ppmify files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(fit_rf_parallel)
 export(folds_list_to_df_list)
 export(gam_posterior_metrics)
 export(optimal_range)
+export(ppmify)
 export(quick_map)
 export(space_time_ppmify)
 export(spatial_sample_plus_close_pairs)
@@ -20,7 +21,6 @@ import(leaflet)
 import(lubridate)
 import(mgcv)
 import(parallel)
-import(ppmify)
 import(ranger)
 import(raster)
 import(sf)
