--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(space_time_ppmify)
 export(spatial_sample_plus_close_pairs)
 import(RANN)
 import(caret)
+import(geojsonio)
 import(graphics)
 import(httr)
 import(leaflet)
