Now uses velox in dist_to_sf_raster

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(gam_posterior_metrics)
 export(optimal_range)
 export(quick_map)
 export(space_time_ppmify)
+export(space_time_ppmify_2)
 export(spatial_sample_plus_close_pairs)
 import(RANN)
 import(caret)
