--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: DiSARM
+Package: disarmr
 Title: A collection of spatial analysis functions related to the DiSARM project at UCSF
 Version: 0.0.0.9000
 Authors@R: person("Hugh", "Sturrock", email = "hughsturrock@gmail.com", role = c("aut", "cre"))
