Adding prevalence_predictor_mgcv function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(fit_rf_parallel)
 export(folds_list_to_df_list)
 export(gam_posterior_metrics)
 export(optimal_range)
+export(prevalence_predictor_mgcv)
 export(quick_map)
 export(space_time_ppmify)
 export(space_time_ppmify_2)
