Updating cv_ml docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(folds_list_to_df_list)
 export(gam_posterior_metrics)
 export(optimal_range)
 export(prevalence_predictor_mgcv)
+export(prevalence_predictor_mgcv_st)
 export(quick_map)
 export(space_time_ppmify)
 export(spatial_sample_plus_close_pairs)
