--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,10 @@ export(gam_posterior_metrics)
 export(optimal_range)
 export(prevalence_predictor_mgcv)
 export(prevalence_predictor_mgcv_st)
+export(prevalence_predictor_spamm_st)
 export(quick_map)
 export(space_time_ppmify)
+export(spamm_posterior_metrics)
 export(spatial_sample_plus_close_pairs)
 import(RANN)
 import(caret)
